<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/exchange_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder_match_status"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/exchange_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder_match_age"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/exchange_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/exchange_status"
        android:text="@string/placeholder_username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
